implement up to feature 5d

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,7 @@
 
 
 	<string name="alert_scan_fail">This device do not support bluetooth!</string>
+	<string name="btn_disconnect">Disconnect</string>
+	<string name="str_ready">Ready</string>
 
 </resources>
